# SmMed

./: .gitignore  CMakeLists.txt  PeachDemo.pro  README.md  SmMed  SmMed.pro  index.css  information.cpp  information.h  information.ui  login.cpp  login.h  login.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qss.qrc  widget.cpp  widget.h  widget.ui
User/: User.pro  login.cpp  login.h  main.cpp  newappointment.cpp  newappointment.h  widget.cpp  widget.h  widget.ui
commonuser/: DBManager.cpp  DBManager.h  aboutjson.cpp  aboutjson.h  adjustedlistwidget.cpp  chat_box.cpp  chat_box.h  commonuser.pro  detailzhihu.cpp  detailzhihu.h  detailzhihu.ui  healthtest.cpp  healthtest.h  information.cpp  information.h  information.ui  little_appointment.cpp  little_appointment.h  little_appointment.ui  little_doctor.cpp  little_doctor.h  little_history.cpp  little_history.h  little_history.ui  little_zhihu.cpp  little_zhihu.h  little_zhihu.ui  login.cpp  login.h  login.ui  main.cpp  myappointment.cpp  myappointment.h  mymessagebox.h  mymessagebox.ui  newappointment.cpp  newappointment.h  newappointment.ui  patient.cpp  patient.h  (+13 more)
dataclass/: Doctor.cpp  Doctor.h  Enum.h  File.h  HttpFileElement.h  Notifications.cpp  Notifications.h  Patient.cpp  Patient.h  Registration.cpp  User.cpp  User.h  dataclass.cpp  dataclass.h  dataclass.pro  dataclass_global.h
dbclient/: OAIDefaultApiHandler.h  aboutjson.h  chart_create.cpp  chart_create.h  qss.qrc  (+41 more)
server/: CMakeLists.txt  main.cpp  server.pro
server/src/: CMakeLists.txt  global.h  main.cpp  messages.cpp  messages.h  server.pro  talkserver.cpp  talkserver.h  usertalkthread.cpp  usertalkthread.h
server/src/db/: StringFactory.cpp  StringFactory.h  dbserver.cpp  dbserver.h
server/src/handlers/: ApiRouter.cpp  ApiRouter.h  AppointmentApiHandler.cpp  AppointmentApiHandler.h  DefaultApiHandler.cpp  DefaultApiHandler.h  DocterApiHandler.cpp  DocterApiHandler.h  FileApiHandler.cpp  FileApiHandler.h  PatientApiHandler.cpp  PatientApiHandler.h  UserApiHandler.cpp  UserApiHandler.h
server/src/models/: Appointment.cpp  Appointment.h  Doctor.cpp  File.cpp  Helpers.cpp  Helpers.h  HttpFileElement.cpp  HttpFileElement.h  Inline_object.cpp  Inline_object.h  Inline_object_1.cpp  Inline_object_1.h  Inline_object_2.cpp  Inline_object_2.h  Inline_object_3.cpp  Inline_object_3.h  Inline_object_4.cpp  Inline_object_4.h  Inline_object_5.cpp  Inline_object_5.h  Inline_response_200.cpp  Inline_response_200.h  Inline_response_200_1.cpp  Inline_response_200_1.h  Inline_response_200_10.cpp  Inline_response_200_10.h  Inline_response_200_10_data.cpp  Inline_response_200_10_data.h  Inline_response_200_11.cpp  Inline_response_200_11.h  Inline_response_200_11_data.cpp  Inline_response_200_11_data.h  Inline_response_200_12.cpp  Inline_response_200_12.h  Inline_response_200_2.cpp  Inline_response_200_2.h  Inline_response_200_3.cpp  Inline_response_200_3.h  Inline_response_200_4.cpp  Inline_response_200_4.h  (+21 more)
server/src/requests/: AppointmentApiRequest.cpp  AppointmentApiRequest.h  DefaultApiRequest.cpp  DefaultApiRequest.h  DocterApiRequest.cpp  DocterApiRequest.h  FileApiRequest.cpp  FileApiRequest.h  PatientApiRequest.cpp  PatientApiRequest.h  UserApiRequest.cpp  UserApiRequest.h
(+85 files in other folders)
